Task 5823: Atualização dos shs template utilizados pelas experiencias e pelo multicast
git-svn-id: file:///tmp/svnroot_only_rec/internal/rec-project/rec/branches/jdk11-migration@20549 8c4c7310-a39f-45c4-bd0d-b10b2e5d99a4